--- a/css/style.css
+++ b/css/style.css
@@ -380,8 +380,6 @@ p{
 }
 
 
-
-
 .feature-card img{
  width: 80px;
  margin: 0 auto;
@@ -421,7 +419,6 @@ p{
 
 .card-slider{
   padding: 100px;
-/*  margin-left: 150px;*/
   max-width: 1410px;
   margin: 0 auto;
 }
@@ -525,9 +522,9 @@ p{
 }
 
 
- #feature{
+/* #feature{
   display: none;
- }
+ }*/
 
   #feature{
     margin: 50px 0;
@@ -556,16 +553,18 @@ p{
 
 }
 
+/*End Feature deskyop section*/
+
 
 
 
 /*Feature Mobile start*/
 
-#feature-mobile{
+/*#feature-mobile{
   padding-top:100px;
   padding-bottom:100px;
 }
-
+*/
 .feature-container-mobile{
   width: 1400px;
   margin: 0 auto;
@@ -1083,9 +1082,6 @@ p{
     padding: 0px;
 }
 
-/*.card-slider{
-  display: none!important;
-}*/
 
 }
 
