--- a/css/style.css
+++ b/css/style.css
@@ -869,7 +869,7 @@ p{
 
 .testimonial-card {
     margin: 10px;
-     padding: 0px; 
+    padding: 10px; 
     /* background-color: lightgrey!important; */
     border-radius: 30px;
     box-shadow: 0 0 10px lightgrey;
@@ -1011,13 +1011,16 @@ p{
 
 .footer-top {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     flex-direction: column;
     margin-top: 100px;
+    margin-bottom: 147px;
     box-sizing: content-box;
     text-align: center;
 }
+
+
   .footer-top-left h2{
     font-size: 2.5rem;
   }
@@ -1039,6 +1042,8 @@ p{
     text-align: center;
     margin: 0 auto;
 }
+
+
 
 .copyright {
     font-size: 16px;
