--- a/css/style.css
+++ b/css/style.css
@@ -212,12 +212,12 @@ p{
 }
 
 
-.fa-bars:before {
+/*.fa-bars:before {
     content: "\f0c9";
     position: relative;
     top: -39px;
 }
-
+*/
 
 .banner-section {
    
