--- a/css/style.css
+++ b/css/style.css
@@ -334,9 +334,17 @@ p{
 }
 
 @media only screen and (max-width: 768px){
+
+  .banner-section {
+    width: 100%;
+    height: 500px;
+    background-image: url(../images/bg.png);
+    background-size: cover;
+}
+
 .banner-content {
     
-    margin-top: 12.5rem;
+    margin-top: 60px;
     text-align: center;
 }
 
