--- a/css/style.css
+++ b/css/style.css
@@ -638,9 +638,9 @@ p{
   }
 
 .feature-container-mobile {
-     width: auto; 
-    margin: 0 auto;
-}
+     width: auto;
+    margin-top: -115px;
+  }
 
 
 .feature-mobile-card {
