--- a/css/style.css
+++ b/css/style.css
@@ -876,10 +876,10 @@ p{
 
 @media only screen and (max-width:768px){
 
-  #testimonial{
+/*  #testimonial{
     margin: 50px 0;
   }
-
+*/
 .testimonial-container {
      width: auto; 
     margin: 0 auto;
